# Qmlcalculator

./: AllButtons.qml  BackspceButton.qml  BsButton.qml  Button.qml  CMakeLists.txt  Caloperations.qml  Main.qml  Operation.js  main.cpp
